Add maven plugin and group to build file

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 plugins {
     id 'java'
     id 'application'
+    id 'maven'
 }
 
 version '1.0-SNAPSHOT'
+
+group = 'com.github.lottetreg'
 
 sourceCompatibility = 1.8
 
