--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 }
 
 dependencies {
+    implementation gradleApi()
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
