--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
     id 'maven'
 }
 
@@ -12,14 +13,28 @@ targetCompatibility = 1.11
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'com.github.lottetreg:saucer:move-classes-over-from-cuppa-SNAPSHOT'
+}
+
+// don't cache dependencies during development
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
 jar {
+    manifest {
+        attributes 'Main-Class': 'io.github.lottetreg.Cuppa.HTTPServer'
+    }
     destinationDir = file('./jar')
+}
+
+application {
+    mainClassName = 'io.github.lottetreg.Cuppa.HTTPServer'
 }
 
 wrapper {
