Rename to Cup: change packages from io.github.lottetreg.cuppa to com.github.lottetreg.cup

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - persist_to_workspace:
           root: ~/repo/jar
           paths:
-            - Cuppa-1.0-SNAPSHOT.jar
+            - cup-1.0-SNAPSHOT.jar
 
 
   deploy:
