--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven'
 }
 
-version '1.0'
+version '0.1.0'
 
 group = 'com.github.lottetreg'
 
@@ -17,8 +17,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'com.github.lottetreg:saucer:change-router-to-servlet-SNAPSHOT'
-//    implementation 'com.github.lottetreg:saucer:v1.0'
+    implementation 'com.github.lottetreg:saucer:0.1.0'
 }
 
 wrapper {
